--- a/views-proyect/src/pages/EditProfile/EditProfile.css
+++ b/views-proyect/src/pages/EditProfile/EditProfile.css
@@ -22,6 +22,7 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    
 }
 
 h1 {
@@ -68,49 +69,57 @@ button:hover {
     background-color: #0056b3;
 }
 
-/* Media queries para tablets y teléfonos */
-@media (max-width: 768px) {
+#container-delete{
+    display: flex;
+    justify-content: center;
+}
+
+#delete-button {
+    background-color: red;
+    color: white;
+}
+
+/* Media Queries para Teléfonos (hasta 767px) */
+@media (max-width: 767px) {
     .container {
-        padding: 10px;
+        padding: 10px; 
     }
 
     .container .form-container {
-        width: 90%;
-        padding: 15px;
+        width: 90%; 
+        padding: 15px; 
     }
 
     h1 {
-        font-size: 1.5rem;
+        font-size: 1.5rem; 
     }
 
     input {
-        font-size: 0.9rem;
+        width: 90%; 
+        font-size: 0.9rem; 
     }
 
     button {
-        font-size: 0.9rem;
+        width: 90%; 
+        font-size: 0.9rem; 
     }
 }
 
-@media (max-width: 480px) {
-    .container {
-        padding: 5px;
-    }
-
+/* Media Queries para Tablets (768px a 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
     .container .form-container {
-        width: 100%;
-        padding: 10px;
-    }
+        max-width: 600px; 
 
     h1 {
-        font-size: 1.2rem;
+        font-size: 2rem; 
     }
 
     input {
-        font-size: 0.8rem;
+        width: 80%; 
     }
 
     button {
-        font-size: 0.8rem;
+        width: 85%; 
+    }
     }
 }
