--- a/views-proyect/src/pages/Login/Login.css
+++ b/views-proyect/src/pages/Login/Login.css
@@ -24,7 +24,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+.container h1 {
     text-align: center;
     margin-bottom: 20px;
     color: black;
